<resources>
    <string name="app_name">BlueProject</string>
    <string name="fragment_title_data">Datenimport</string>
    <string name="fragment_title_tray">Gerätefächer</string>
    <string name="fragment_title_item">Ausrüstung</string>
    <string name="fragment_title_detail">Detailansicht</string>
    <string name="fragment_title_debug">Debug</string>

    <string name="option_menu_data">Datenbank</string>
    <string name="option_menu_debug">Debug</string>

    <string name="search_title">Suchen</string>
    <string name="search_hint">Suche starten...</string>

    <string name="detail_name">Bezeichnung</string>
    <string name="detail_description">Beschreibung</string>
    <string name="detail_setname">Gerätesatz</string>
    <string name="detail_position">Position</string>

    <string name="debug_db_info">Datenbankstatus</string>
    <string name="debug_db_info_item">Einträge Tabelle Item</string>
    <string name="debug_db_info_tray">Einträge Tabelle Tray</string>

    <string name="data_url">Datenbank URL</string>
    <string name="data_progress">Fortschritt</string>

</resources>
