<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    app:showAsAction="always">

    <item
        android:id="@+id/OptionMenuItemData"
        android:title="@string/option_menu_data"
        app:showAsAction="never"/>

    <item
        android:id="@+id/OptionMenuDebug"
        android:title="@string/option_menu_debug"
        app:showAsAction="never"/>

    <item android:id="@+id/search"
        android:title="@string/search_title"
        app:showAsAction="collapseActionView|ifRoom"
        android:icon="@drawable/ic_search_black_24dp"
        android:iconTint="@android:color/white"
        app:actionViewClass="android.widget.SearchView" />





</menu>

