<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dresden.de.blueproject.fragments.DebugFragment"
    android:layout_margin="16dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/debugLayout1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_db_info"
            android:id="@+id/debugTV1"
            android:orientation="vertical"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_highlight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_db_info_item"
            android:id="@+id/debugTV2x"
            app:layout_constraintTop_toBottomOf="@id/debugTV1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:id="@+id/debug_db_info_item"
            android:layout_marginLeft="@dimen/margin_normal"
            app:layout_constraintLeft_toRightOf="@id/debugTV2x"
            app:layout_constraintTop_toTopOf="@id/debugTV2x"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_db_info_tray"
            android:id="@+id/debugTV3"
            app:layout_constraintTop_toBottomOf="@id/debugTV2x"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:id="@+id/debug_db_info_tray"
            android:layout_marginLeft="@dimen/margin_normal"
            app:layout_constraintLeft_toRightOf="@id/debugTV3"
            app:layout_constraintTop_toTopOf="@id/debugTV3"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/debugLayout2"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/debugLayout1"
        android:layout_marginTop="2mm">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Datenbankoptionen"
            android:id="@+id/debugTV2"
            android:orientation="vertical"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size_highlight"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btAddDummyItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dummy-Items hinzufügen"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btAddDummyTray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dummy-Trays hinzufügen"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2mm">

            <Button
                android:id="@+id/btDeleteItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Items löschen"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btDeleteTray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trays löschen"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
